# shulker

./: .gitignore  README.md  beet-upload.yaml  beet.yaml  plan.md  pyproject.toml  summit.md  todos.md
docs/: BOLT_EXPRESSIONS.md  COMPONENTS.MD  ITEM_SYSTEM.md  README.md  style_guide.md
plugins/: bloom.py  cleanup_empty_functions.py  commands.py  component_caching.py  component_import.py  custom_load.py  fancy_macros.py  minecraft_namespace_checker.py  update_server.py  upload.py
src/: lobby.bolt  prelude.bolt  sys.bolt  test.bolt
src/__testing/: lime.bolt  test.bolt
src/__testing__/: balloons.bolt  bundlify.bolt  component.bolt  lime.bolt  rx.bolt  test.bolt
src/component/: always_edible.py  ammo.bolt  armor.py  attack.bolt  attack.py  base.py  bow.bolt  capped_count.bolt  crossbow.bolt  droppable.bolt  durability_bar.bolt  dynamic_key.bolt  holding.bolt  item_durability.bolt  item_enchant.bolt  kill.bolt  left_click.bolt  melee.bolt  meta.py  on_hold.bolt  on_use.bolt  resupply.bolt  resupply_on_empty.bolt  shield_hit.bolt  sneaking.bolt  strike.bolt  throwable.bolt  ticking.bolt  tip.bolt  transformers.py  two_handed.bolt  type.py  usable.bolt  useable.bolt  using.bolt  weapon.py
src/enchants/: negative_sharpness.bolt
src/events/: on_join.bolt  on_leave_game.bolt
src/game/: events.bolt  instance.bolt  manager.bolt  models.bolt  models_.bolt  player.bolt
src/item/: base.bolt  base.py  damage_types.bolt  generate.bolt  meta.py  type.py
src/kit/: base.bolt  events.bolt
src/lib/: attribute.bolt  component_validation.py  const.py  custom_resources.bolt  custom_resources.py  db.bolt  errors.py  flying_text.bolt  helpers.py  interaction.bolt  inventory_management.bolt  item.bolt  item.py  motion.bolt  player.bolt  predicates.bolt  prelude.bolt  rich.py  rom.bolt  scores.bolt  shulker_box.bolt  storage_helpers.bolt  text.bolt  text.py  types.py  utils.bolt  vector_helpers.bolt  vector_utils.bolt  xp.bolt
src/lobby/: core.bolt  effects.bolt  reset.bolt  sidebar.bolt
src/menu/: quick_actions.bolt  templates.bolt
src/modules/: lime.bolt  sys.bolt  test.bolt
src/player/: damage_text.bolt  events.bolt  services.bolt
src/plugins/: custom_load.py  upload.py
src/server/: admin.bolt  core.bolt  events.bolt  prelude.bolt
src/services/: player_count.bolt
src/shulker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/summit/: booth_definition.json  domination.bolt  (+1 more)
(+132 files in other folders)
