[project]
authors = [
  {name = "rx97"},
]
dependencies = [
  "beet>=0.108.5",
  "bolt>=0.49.1",
  "bolt-expressions>=0.17.0",
  "rich>=13.9.2",
  "ipython>=8.28.0",
  "minecraft-text-components>=3.3.0",
  "beet-plugins @ git+https://github.com/thewii/beet-plugins",
  "pillow>=11.0.0",
  "requests>=2.32.3",
  "python-dotenv>=1.1.1",
  "pytz>=2025.2",
]
description = "Add your description here"
name = "shulker"
readme = "README.md"
requires-python = ">= 3.10"
version = "0.1.0"
