[project]
authors = [
  {name = "rx97"},
]
dependencies = [
  "beet>=0.108.5",
  "bolt>=0.49.1",
  "bolt-expressions>=0.17.0",
  "rich>=13.9.2",
  "ipython>=8.28.0",
  "minecraft-text-components>=3.3.0",
  "beet-plugins @ git+https://github.com/thewii/beet-plugins",
  "pillow>=11.0.0",
  "python-dotenv>=1.1.1",
  "pytz>=2025.2",
  "click>=8.2.1",
  "pyyaml>=6.0.2",
  "typeguard>=4.4.4",
  "websockets>=15.0.1",
  "methodtools>=0.4.7",
  "httpx>=0.28.1",
  "pydantic>=2.12.5",
  "bolt-native-macros>=0.4.0",
  "mecha>=0.102.2",
  "bolt-selectors>=0.4.0",
]
description = "Add your description here"
name = "shulker"
readme = "README.md"
requires-python = ">= 3.14"
version = "0.1.0"

[project.entry-points.beet]
commands = "plugins.commands"

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.26,<0.10.0"]

[tool.uv.build-backend]
module-name = "plugins"
module-root = ""

[tool.uv.sources]
beet = { git = "https://github.com/MineRobber9000/beet", branch = "proper-encode" }

[dependency-groups]
dev = [
  "ruff>=0.12.12",
]
